MacViews: Don't switch Spaces when calling ShowInactive() for a child Widget.

StatusBubbleViews::StatusView could accidentally switch a Space.
It will call Widget::ShowInactive(), which will invoke
[window_ orderWindow:NSWindowAbove relativeTo:parent_window_number],
which will in turn switch the Space (if Chromium is the frontmost
application).

Transient collection behaviour stops NSWindows from triggering this.

BUG=697829

Review-Url: https://codereview.chromium.org/2735723003
Cr-Commit-Position: refs/heads/master@{#455003}

Former-commit-id: c4668427a0d5fdd3b376adc871108f14803c6738